Fixed a float bug in api browser, Added borders to images to help their visibility, fixed API browser breadcrumbs to display "API browser" rather than "api"

--- a/media/guide/css/kodoc.css
+++ b/media/guide/css/kodoc.css
@@ -127,6 +127,11 @@ h6:hover a.permalink {
 	display:inline;
 }
 
+#main img {
+	padding:1em;
+	outline:1px solid #999;
+}
+
 
 /* layout stuff */
 
